--- a/css/style.css
+++ b/css/style.css
@@ -10,13 +10,16 @@ ul {
     padding: 0;
     overflow: hidden;
     background-color: #121C25;
-    border-radius: 25px 255x 25px 25px;
+    border-radius: 25px 25x 25px 25px;
+    position: fixed
    
    
   }
   
   li {
     float: left;
+    list-style-type: none;
+    height: 56px;
   }
   
   li a {
@@ -25,6 +28,7 @@ ul {
     text-align: center;
     padding: 20px 18px;
     text-decoration: none;
+    
   }
 
   .active {
@@ -39,8 +43,11 @@ ul {
 
 header{
     background-color: #121C25;
-    height: 100px;
+    height: 60px;
+    position: fixed;
+    width: 100%
 }
+
 h1{
     text-size-adjust: 2.5em;
     float: left;
@@ -52,21 +59,116 @@ h1{
 main{
     width: 1000px;
     min-height: 700px;
-    margin: 20px auto;
+    margin: 5px auto;
     background-color: #9CB1BF;
+    
 }
     
 main li:last-child{
     margin-right: 0;
 }
 footer{
-    height: 30px;
+    height: 60px;
     background: #3E3836
 }
 p{
-    padding: 20px;
+    padding: 10px 10px 10px 10px;
+    margin: 10px;
+    border: 20px;
+    text-align: center
 }
 
 div.ex1 {
   overflow: scroll;
 }
+
+.HolyGrail {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+.HolyGrail-body {
+  display: flex;
+  flex: 1;
+}
+
+.HolyGrail-content {
+  flex: 1;
+}
+
+ .HolyGrail-ads {
+  flex: 0 0 12em;
+  padding: 50px 12px 12px 12px;
+  margin: 20px;
+  color: white;
+  width: 3em;
+}
+
+.HolyGrail,
+.HolyGrail-body {
+  display: flex;
+  flex-direction: column;
+}
+
+
+@media (min-width: 768px) {
+  .HolyGrail-body {
+    flex-direction: row;
+    flex: 1;
+  }
+  .HolyGrail-content {
+    flex: 1;
+  }
+   .HolyGrail-ads {
+    flex: 0 0 12em;
+  }
+}
+.hero {
+  font-size: 5rem;
+  color: ivory; 
+  color: white;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+  text-transform: uppercase;
+  horizontal-align: center; 
+  text-align: center;
+  letter-spacing: .45rem;
+  font-weight: 700;
+  width: 100%;
+  height: 240px;
+  margin: 0 auto;
+  line-height: 20rem;
+  background: #000000 url('https://www.maxpixel.net/static/photo/1x/Rectangle-Contacts-Background-Nested-Contact-Points-2326124.jpg');
+  opacity: 90%;
+}
+
+ol-ad {
+  text-align: center;
+}
+
+h2 {
+  font-size: 3rem;
+  text-align: center;
+  text-shadow: 0 1px 0 #ccc,
+               0 2px 0 #c9c9c9,
+               0 3px 0 #bbb,
+               0 4px 0 #b9b9b9,
+               0 5px 0 #aaa,
+               0 6px 1px rgba(0,0,0,.1),
+               0 0 5px rgba(0,0,0,.1),
+               0 1px 3px rgba(0,0,0,.3),
+               0 3px 5px rgba(0,0,0,.2),
+               0 5px 10px rgba(0,0,0,.25),
+               0 10px 10px rgba(0,0,0,.2),
+               0 20px 20px rgba(0,0,0,.15);
+}
+
+.element {
+	text-shadow:
+		-1px -1px 0 #000,
+		1px -1px 0 #000,
+		-1px 1px 0 #000,
+		1px 1px 0 #000;
+}
+
+/* Hero css properties https://codepen.io/macbubb/pen/qLJbJb */
